--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "MUM Migrator",
+    "name": "mum-project/migrator",
     "description": "Migration Tool for MUM to use with ViMbAdmin",
     "keywords": ["MUM", "email", "migration", "vimbadmin"],
     "homepage": "https://github.com/mum-project/migrator",
@@ -17,10 +17,10 @@
     ],
     "require": {
         "php": "^7.1.3",
-        "illuminate/database": "5.6.*",
-        "illuminate/log": "5.6.*",
-        "laravel-zero/framework": "5.6.*",
-        "vlucas/phpdotenv": "^2.5"
+        "illuminate/database": "5.8.*",
+        "illuminate/log": "5.8.*",
+        "laravel-zero/framework": "5.8.*",
+        "vlucas/phpdotenv": "^3.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.1"
