--- a/composer.json
+++ b/composer.json
@@ -17,9 +17,9 @@
     ],
     "require": {
         "php": "^7.1.3",
-        "illuminate/database": "5.8.*",
-        "illuminate/log": "5.8.*",
-        "laravel-zero/framework": "5.8.*",
+        "illuminate/database": "^6.0",
+        "illuminate/log": "^6.0",
+        "laravel-zero/framework": "^6.0",
         "vlucas/phpdotenv": "^3.0"
     },
     "require-dev": {
